--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,7 +1,8 @@
 <!-- web/templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+<script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Emelia Bot Dashboard{% endblock %}</title>
